--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="<%= image_url('favicon.ico') %>" />
     <title>NoteBinder</title>
     <%= csrf_meta_tags %>
 
