--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -397,7 +397,7 @@ img {
   font-weight: 300;
   font-size: 21px;
   color: #878787;
-  padding-bottom: 36px;
+  margin-bottom: 36px;
 }
 
 .note-trash-icon {
@@ -504,7 +504,6 @@ img {
   width: calc(100vw - 424px);
   min-width: 724px;
   height: 100vh;
-  overflow-y: scroll;
 }
 
 .notebooks-index-header {
@@ -618,8 +617,10 @@ img {
 
 .notebook {
   display: block;
-  height: 100vh;
-  padding: 12px 18px;
+  height: calc(100vh - 60px);
+  margin: 30px 0;
+  padding: 0 18px 12px 18px;
+  overflow-y: scroll;
 }
 
 .notebook > h1 {
@@ -627,7 +628,7 @@ img {
   font-weight: 300;
   font-size: 21px;
   color: #878787;
-  padding-bottom: 36px;
+  margin-bottom: 36px;
 }
 
 .notebook-trash-icon {
@@ -645,7 +646,7 @@ img {
 
 .notebook > p {
   margin-left: 48px;
-  padding-bottom: 44px;
+  height: 48px;
   font-family: gotham, helvetica, arial, sans-serif;
   font-size: 14px;
   color: #f00;
