--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1025,3 +1025,128 @@ img {
 .account-update-form-error:last-of-type {
   margin-bottom: 20px;
 }
+
+/* --- NOTE SEARCH --- */
+
+.search-notes-index {
+  display: block;
+  float: left;
+  width: 352px;
+  border-left: 1px solid #ececec;
+  border-right: 1px solid #ececec;
+}
+
+.search-notes-index-children {
+  display: block;
+  float: left;
+  width: calc(100vw - 424px);
+  min-width: 724px;
+  height: 100vh;
+}
+
+.search-notes-index-header {
+  display: block;
+  height: 106px;
+  padding: 24px 0 0 24px;
+  border-bottom: 1px solid #ececec;
+}
+
+.search-notes-index-header > h1 {
+  font-family: gotham, helvetica, arial, sans-serif;
+  font-size: 21px;
+  font-weight: 300;
+  color: #878787;
+}
+
+.note-search-form {
+  margin: 5px 0;
+}
+
+.note-search-input-field {
+  width: 50%;
+  border: 1px solid #ececec;
+  border-radius: 4px;
+  padding: 1px 2px;
+  font-family: gotham, helvetica, arial, sans-serif;
+  font-size: 16px;
+  color: #2dbe60;
+}
+
+.note-search-submit-button {
+  margin-left: 4px;
+  border: 1px solid #1fae52;
+  border-radius: 4px;
+  padding: 1px 8px;
+  background: #2dbe60;
+  font-family: gotham, helvetica, arial, sans-serif;
+  font-size: 16px;
+  color: #fff;
+}
+
+.note-search-submit-button:hover {
+  cursor: pointer;
+  opacity: 0.75;
+}
+
+.search-notes-index-header > p {
+  font-family: gotham, helvetica, arial, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  color: #ababab;
+}
+
+.search-notes-index-main {
+  height: calc(100vh - 106px);
+  overflow-y: scroll;
+}
+
+.search-notes-index-item-wrapper {
+  border-bottom: 1px solid #ececec;
+}
+
+.search-notes-index-item-wrapper:last-child {
+  border-bottom: 0;
+}
+
+.search-notes-index-item {
+  display: block;
+  height: 120px;
+  padding: 8px 27px;
+  overflow: hidden;
+}
+
+.search-notes-index-item > h2 {
+  word-wrap: break-word;
+  margin-bottom: 6px;
+  font-family: caecilia, times, serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #4a4a4a;
+}
+
+.search-notes-index-item > p {
+  word-wrap: break-word;
+  margin: 8px 0;
+  font-family: gotham, helvetica, arial, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #878787;
+}
+
+.search-notes-index-item:hover {
+  cursor: pointer;
+  background: #2dbe60;
+  color: #fff;
+}
+
+.search-notes-index-item:hover > h2 {
+  cursor: pointer;
+  background: #2dbe60;
+  color: #fff;
+}
+
+.search-notes-index-item:hover > p {
+  cursor: pointer;
+  background: #2dbe60;
+  color: #fff;
+}
