--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -420,6 +420,9 @@ img {
   opacity: 0.75;
 }
 
+.note-children {
+}
+
 .note-error {
   display: block;
   width: 250px;
@@ -494,11 +497,12 @@ img {
 /* --- NOTEBOOKS --- */
 
 .notebooks-index {
-  display: block;
-  float: left;
+  display: inline-block;
   width: 352px;
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
+  position: fixed;
+  left: 72px;
 }
 
 .notebooks-index-header {
@@ -623,11 +627,15 @@ img {
 /* --- NOTEBOOK --- */
 
 .notebook {
-  display: block;
+  display: inline-block;
   height: calc(100vh - 60px);
+  width: calc(100vw - 424px);
   margin: 30px 0;
   padding: 0 18px 12px 18px;
   overflow-y: scroll;
+  position: fixed;
+  left: 424px;
+  min-width: 724px;
 }
 
 .notebook > h1 {
@@ -779,7 +787,7 @@ img {
   display: block;
   float: left;
   width: calc(100vw - 424px);
-  min-width: 724px;
+  min-width: 424px;
   height: 100vh;
 }
 
@@ -867,9 +875,8 @@ img {
 
 .tag {
   display: block;
-  width: 50%;
-  max-height: calc(100vh - 60px);
-  margin: 30px auto 30px auto;
+  width: 212px;
+  margin: 30px auto;
   overflow-y: scroll;
 }
 
@@ -893,7 +900,7 @@ img {
 }
 
 .tag-name-input-field {
-  width: 50%;
+  width: 200px;
   border: 1px solid #ececec;
   border-radius: 4px;
   margin: 0 6px;
@@ -1034,16 +1041,16 @@ img {
 /* --- NOTE SEARCH --- */
 
 .search-notes-index {
-  display: block;
-  float: left;
+  display: inline-block;
   width: 352px;
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
+  position: fixed;
+  left: 72px;
 }
 
 .search-notes-index-children {
   display: block;
-  float: left;
   width: calc(100vw - 424px);
   min-width: 724px;
   height: 100vh;
