--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -174,7 +174,9 @@ img {
 /* --- HOME --- */
 
 .home-sidebar {
-  display: inline-block;
+  display: block;
+  position: fixed;
+  left: 0;
   width: 72px;
   height: 100vh;
   background: #f8f8f8;
@@ -182,9 +184,11 @@ img {
 }
 
 .home-main {
-  display: inline-block;
+  display: block;
+  position: fixed;
+  left: 72px;
   width: calc(100vw - 72px);
-  position: relative;
+  min-width: 1076px;
 }
 
 .sidebar-avatar > img {
@@ -298,8 +302,6 @@ img {
   width: 352px;
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
-  position: fixed;
-  left: 72px;
 }
 
 .notes-index-children {
@@ -389,14 +391,12 @@ img {
 
 .note {
   display: inline-block;
-  height: calc(100vh - 60px);
   width: calc(100vw - 424px);
+  min-width: 724px;
+  height: calc(100vh - 60px);
   margin: 30px 0;
   padding: 0 18px 12px 18px;
   overflow-y: scroll;
-  position: fixed;
-  left: 424px;
-  min-width: 724px;
 }
 
 .note > h1 {
@@ -501,8 +501,6 @@ img {
   width: 352px;
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
-  position: fixed;
-  left: 72px;
 }
 
 .notebooks-index-header {
@@ -510,8 +508,7 @@ img {
 }
 
 .notebooks-index-children {
-  display: block;
-  float: left;
+  display: inline-block;
   width: calc(100vw - 424px);
   min-width: 724px;
   height: 100vh;
@@ -628,14 +625,12 @@ img {
 
 .notebook {
   display: inline-block;
-  height: calc(100vh - 60px);
   width: calc(100vw - 424px);
+  min-width: 724px;
+  height: calc(100vh - 60px);
   margin: 30px 0;
   padding: 0 18px 12px 18px;
   overflow-y: scroll;
-  position: fixed;
-  left: 424px;
-  min-width: 724px;
 }
 
 .notebook > h1 {
@@ -772,8 +767,7 @@ img {
 /* --- TAGS --- */
 
 .tags-index {
-  display: block;
-  float: left;
+  display: inline-block;
   width: 352px;
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
@@ -784,11 +778,12 @@ img {
 }
 
 .tags-index-children {
-  display: block;
-  float: left;
+  display: inline-block;
   width: calc(100vw - 424px);
-  min-width: 424px;
+  min-width: 724px;
   height: 100vh;
+  position: fixed;
+  left: 424px;
 }
 
 .tags-index-header {
@@ -874,10 +869,10 @@ img {
 /* --- NEW TAG --- */
 
 .tag {
-  display: block;
-  width: 212px;
-  margin: 30px auto;
-  overflow-y: scroll;
+  display: inline-block;
+  width: calc(100vw - 424px);
+  min-width: 724px;
+  margin: 30px 0;
 }
 
 .tag > img {
@@ -1045,12 +1040,10 @@ img {
   width: 352px;
   border-left: 1px solid #ececec;
   border-right: 1px solid #ececec;
-  position: fixed;
-  left: 72px;
 }
 
 .search-notes-index-children {
-  display: block;
+  display: inline-block;
   width: calc(100vw - 424px);
   min-width: 724px;
   height: 100vh;
