Move external links to sidebar

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -17,7 +17,11 @@
     tags: "<%= image_url('tags.png') %>",
     trash: "<%= image_url('trash.png') %>",
     new_notebook: "<%= image_url('new_notebook.png') %>",
-    new_tag: "<%= image_url('new_tag.png') %>"
+    new_tag: "<%= image_url('new_tag.png') %>",
+    auth_bg: "<%= image_url('auth_bg.jpg') %>",
+    portfolio: "<%= image_url('portfolio.png') %>",
+    github: "<%= image_url('github.png') %>",
+    linkedin: "<%= image_url('linkedin.png') %>"
   }
 </script>
 
