--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -272,13 +272,15 @@ img {
 
 .account-items > p {
   float: left;
-  padding: 6px 10px;
+  padding: 6px 8px 6px 0;
+  color: #2dbe60;
 }
 
 .account-items > a {
   float: left;
   text-decoration: underline;
-  padding: 6px 0;
+  padding: 6px 8px 6px 0;
+  color: #2dbe60;
 }
 
 .account-items > a:hover {
@@ -289,7 +291,8 @@ img {
 .account-items > button {
   float: left;
   text-decoration: underline;
-  padding: 6px 10px;
+  padding: 6px 10px 6px 0;
+  color: #2dbe60;
 }
 
 .account-items > button:hover {
@@ -309,6 +312,7 @@ img {
 .notes-index-children {
   display: inline-block;
   height: 100vh;
+  float: right;
 }
 
 .notes-index-header {
@@ -395,9 +399,9 @@ img {
   display: inline-block;
   width: calc(100vw - 424px);
   min-width: 724px;
-  height: calc(100vh - 60px);
-  margin: 30px 0;
-  padding: 0 18px 12px 18px;
+  height: calc(100vh - 30px);
+  margin-top: 30px;
+  padding: 12px 18px;
   overflow-y: scroll;
 }
 
@@ -474,8 +478,8 @@ img {
   color: #2dbe60;
 }
 
-.note-body {
-  color: #383838;
+.ql-editor {
+  min-height: 300px;
 }
 
 .note-submit-button {
