--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -633,9 +633,9 @@ img {
   display: inline-block;
   width: calc(100vw - 424px);
   min-width: 724px;
-  height: calc(100vh - 60px);
-  margin: 30px 0;
-  padding: 0 18px 12px 18px;
+  height: calc(100vh - 30px);
+  margin-top: 30px;
+  padding: 12px 18px;
   overflow-y: scroll;
 }
 
@@ -878,6 +878,7 @@ img {
   width: calc(100vw - 424px);
   min-width: 724px;
   margin: 30px 0;
+  padding: 12px 0;
 }
 
 .tag > img {
