Update modal for confirming note deletion

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -531,7 +531,7 @@ img {
 .modal-message {
   margin: 4px 0;
   font-family: gotham, helvetica, arial, sans-serif;
-  color: #2dbe60;
+  color: #1fae52;
 }
 
 .modal-buttons {
