Update link to notebook update page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -672,19 +672,15 @@ img {
   color: #fff;
 }
 
-.notebook-update-link {
-  margin: 0 6px;
-  border: 1px solid #ececec;
-  border-radius: 4px;
-  padding: 1px 8px;
-  background: #f8f8f8;
-  color: #383838;
+.edit-notebook-icon {
+  float: right;
+  width: 38px;
+  height: 38px;
 }
 
-.notebook-update-link:hover {
+.edit-notebook-icon:hover {
   cursor: pointer;
-  background: #fff;
-  color: #2dbe60;
+  opacity: 0.75;
 }
 
 /* --- NOTEBOOK --- */
