--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -18,6 +18,7 @@
     trash: "<%= image_url('trash.png') %>",
     new_notebook: "<%= image_url('new_notebook.png') %>",
     new_tag: "<%= image_url('new_tag.png') %>",
+    edit_notebook: "<%= image_url('edit_notebook.png') %>",
     portfolio: "<%= image_url('portfolio.png') %>",
     github: "<%= image_url('github.png') %>",
     linkedin: "<%= image_url('linkedin.png') %>"
